# k8s-autobuilder

./: Dockerfile  LICENSE.txt  README.md  design_doc.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
backend/: __init__.py  generics.py  kubernetes_interface.py  main.py
backend/webhooks/: github.py
examples/: config.yaml  job_template.yaml  job_template_with_vars.yaml  repo_config.yaml
examples/deploy/: README.md  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
src/backend/: generics.py
src/backend/webhooks/: github.py
src/examples/: job_template.yaml
