[metadata]
name = k8s_autobuilder
version = 0.0.1
author = HubbeKing
author_email = github@hubbe.club
description = A kubernetes-native CI/CD tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HubbeKing/k8s_autobuilder
project_urls =
    Bug Tracker = https://github.com/HubbeKing/k8s_autobuilder/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
